--- a/indexsprint1.html
+++ b/indexsprint1.html
@@ -24,7 +24,7 @@
         </div>
         
         <div class="logo">
-            <img src="C:\Users\leonel\Downloads\accesorios.png" alt="Logo Accesorios Angélica">
+            <img src="Imagen.logo/accesorios.png" alt="Logo Accesorios Angélica">
         </div>
 
 
