--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <ul class="nav nav-tabs">
             <li class="nav-item">
-            <a class="nav-link inicio" aria-current="page" href="./indexsprint1.html">Inicio</a>
+            <a class="nav-link inicio" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Productos</a>
